--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-howler": "^3.8.0",
+    "react-icons": "^3.11.0",
     "react-notifications": "^1.6.0",
     "styled-components": "^5.1.1"
   },
